# gpr-300_final_clark-ranz

./: CMakeLists.txt
assignments/assignment0/: CMakeLists.txt  main.cpp  notmain.h
assignments/assignment0/assets/: simple.frag  simple.vert  water.frag  water.vert
finalProject/: CMakeLists.txt  main.cpp  notmain.h
finalProject/assets/: xray.md
finalProject/assets/models/: wakeboard source.txt
finalProject/assets/outlinedObjects/: light.h  object.h  renderer.cpp  renderer.h
finalProject/assets/outlines/: outlines.cpp  outlines.h  xray.md
finalProject/assets/program/: compositeRenderer.cpp  compositeRenderer.h  light.h  object.h  outlines.cpp  outlines.h  regular.cpp  regular.h  shadows.cpp  shadows.h
finalProject/assets/shaders/: lit.frag  lit.vert  outline.vert  shadow.frag  shadow.vert  singleColor.frag  singleColor.vert  skybox.vert  water.frag  water.vert
